--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "group-12-js-project",
+  "name": "Filmoteka-test",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://KateSkoryna.github.io/group-12-js-project",
+  "homepage": "",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /group-12-js-project/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "https://github.com/Andrii-Vekker/Filmoteka-test/tree/main"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Andrii <vekker304@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/Andrii-Vekker/Filmoteka-test/issues"
   },
   "dependencies": {
     "axios": "^0.27.2",
